network-policies/auth-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-api-allow-ingress
  namespace: auth-api
spec:
  podSelector:
    matchLabels:
      app: auth-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: front
      podSelector:
        matchLabels:
          app: front
    ports:
    - protocol: TCP
      port: 8000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-api-allow-egress
  namespace: auth-api
spec:
  podSelector:
    matchLabels:
      app: auth-api
  policyTypes:
  - Egress
  egress:
  # DNS
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
  #users-api
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: users-api
      podSelector:
        matchLabels:
          app: users-api
    ports:
    - protocol: TCP
      port: 8083
