network-policies/front-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-allow-ingress
  namespace: front
spec:
  podSelector:
    matchLabels:
      app: front
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: front-allow-egress
  namespace: front
spec:
  podSelector:
    matchLabels:
      app: front
  policyTypes:
  - Egress
  egress:
  # DNS
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
  
  # auth-api
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: auth-api
      podSelector:
        matchLabels:
          app: auth-api
    ports:
    - protocol: TCP
      port: 8000
        
  # todos
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: todos
      podSelector:
        matchLabels:
          app: todos
    ports:
    - protocol: TCP
      port: 8082
