network-policies/logs-Policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: logs-egress-redis
  namespace: logs
spec:
  podSelector:
    matchLabels:
      app: logs
  policyTypes:
  - Ingress
  - Egress
  ingress: []
  egress:
  # redis
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: redis
      podSelector:
        matchLabels:
          app: redis
    ports:
    - protocol: TCP
      port: 6379
  # DNS
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
---
