network-policies/user-Policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: users-api-allow-ingress-from-auth-api
  namespace: users-api
spec:
  podSelector:
    matchLabels:
      app: users-api
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: auth-api
      podSelector:
        matchLabels:
          app: auth-api
    ports:
    - protocol: TCP
      port: 8083
  egress: []
